make sure there are not two scrollbars

--- a/client/src/styles/web.css
+++ b/client/src/styles/web.css
@@ -3,6 +3,7 @@ html, body {
   margin: 0;
   cursor: default;
   height: 100%;
+  overflow: hidden;
 }
 
 .app-container {
